<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAndroidApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="first_name_">First Name:</string>
    <string name="last_name_">Last Name:</string>
    <string name="_submit">Submit</string>
    <string name="title_activity_confirm_user_name">ConfirmUserName</string>

</resources>